--- a/.github/workflows/zipMe.yml
+++ b/.github/workflows/zipMe.yml
@@ -10,7 +10,7 @@ jobs:
             - uses: actions/checkout@v1
             - uses: montudor/action-zip@v1
               with:
-                args: zip -qq -r CursorConnect.zip assets
+                args: zip -qq -r .github/artifacts/CursorConnect.zip assets
             - uses: actions/upload-artifact@v2
               with:
                 name: CursorConnect.zip
