--- a/.github/workflows/zipMe.yml
+++ b/.github/workflows/zipMe.yml
@@ -11,8 +11,8 @@ jobs:
             - uses: montudor/action-zip@v1
               with:
                 args: zip -qq -r CursorConnect.zip assets background.js contentScript.js flip.css flip.js manifest.json popup.css popup.html popup.js tick.css
-            uses: mnao305/chrome-extension-upload@v4.0.1
-            with:
+            - uses: mnao305/chrome-extension-upload@v4.0.1
+              with:
                 file-path: CursorConnect.zip
                 extension-id: hogefuga(pbgcbdejeombmjjgcoiifcecobdhfmnl)
                 client-id: ${{ secrets.CLIENT_ID }}
