--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CursorConnect",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Real-time cursor interaction for a more connected browsing experience.",
   "permissions": ["storage", "activeTab", "tabs"],
   "background": {
@@ -15,14 +15,26 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [
+      "resources": [  
         "assets/cursor.png"
       ],
       "matches": ["*://*/*"]
     }
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "32": "assets/icon32.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
+    } 
+  },
+  "icons": {
+    "16": "assets/icon16.png",
+    "32": "assets/icon32.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
   },
   "manifest_version": 3
 }
