--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -10,7 +10,7 @@ jobs:
             - uses: actions/checkout@v1
             - uses: montudor/action-zip@v1
               with:
-                args: zip -qq -r CursorConnect.zip assets background.js contentScript.js flip.css flip.js manifest.json popup.css popup.html popup.js tick.css
+                args: zip -qq -r CursorConnect.zip assets customization  background.js contentScript.js flip.css flip.js manifest.json popup.css popup.html popup.js tick.css
             - uses: mnao305/chrome-extension-upload@v4.0.1
               with:
                 file-path: CursorConnect.zip
