--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CursorConnect",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Real-time cursor interaction for a more connected browsing experience.",
   "permissions": ["storage", "tabs"],
   "background": {
@@ -16,7 +16,8 @@
   "web_accessible_resources": [
     {
       "resources": [  
-        "assets/cursor.png"
+        "assets/cursor.png",
+        "customization/*.png"
       ],
       "matches": ["*://*/*"]
     }
