--- a/.github/workflows/chrome_publish.yml
+++ b/.github/workflows/chrome_publish.yml
@@ -1,4 +1,4 @@
-name: Publish to Chrome Web Store - dev (testers only)
+name: Publish to Chrome Web Store
 on:
     push:
       branches: [ "main" ]
@@ -10,7 +10,7 @@ jobs:
             - uses: actions/checkout@v1
             - uses: montudor/action-zip@v1
               with:
-                args: zip -qq -r CursorConnect.zip assets background.js contentScript.js flip.css flip.js manifest.json popup.css popup.html popup.js tick.css
+                args: zip -qq -r CursorConnect.zip assets customization contentScript.js flip.css flip.js ./platform/chromium/manifest.json popup.css popup.html popup.js tick.css
             - uses: mnao305/chrome-extension-upload@v4.0.1
               with:
                 file-path: CursorConnect.zip
@@ -18,3 +18,4 @@ jobs:
                 client-id: ${{ secrets.CLIENT_ID }}
                 client-secret: ${{ secrets.CLIENT_SECRET }}
                 refresh-token: ${{ secrets.REFRESH_TOKEN }}
+                publish: false
