--- a/.github/workflows/chrome_publish.yml
+++ b/.github/workflows/chrome_publish.yml
@@ -2,7 +2,8 @@ name: Publish to Chrome Web Store
 on:
     push:
       branches: [ "main" ]
-
+    workflow_dispatch:
+      
 jobs:
     zip:
         runs-on: ubuntu-latest
