--- a/.github/workflows/chrome_publish.yml
+++ b/.github/workflows/chrome_publish.yml
@@ -3,7 +3,7 @@ on:
     push:
       branches: [ "main" ]
     workflow_dispatch:
-      
+
 jobs:
     zip:
         runs-on: ubuntu-latest
@@ -11,7 +11,7 @@ jobs:
             - uses: actions/checkout@v1
             - uses: montudor/action-zip@v1
               with:
-                args: zip -qq -r CursorConnect.zip assets customization contentScript.js flip.css flip.js ./platform/chromium/manifest.json popup.css popup.html popup.js tick.css
+                args: zip -qq -j -r CursorConnect.zip assets customization contentScript.js flip.css flip.js ./platform/chromium/manifest.json popup.css popup.html popup.js tick.css
             - uses: mnao305/chrome-extension-upload@v4.0.1
               with:
                 file-path: CursorConnect.zip
