--- a/.github/workflows/chrome_publish.yml
+++ b/.github/workflows/chrome_publish.yml
@@ -11,7 +11,7 @@ jobs:
             - uses: actions/checkout@v1
             - uses: montudor/action-zip@v1
               with:
-                args: zip -qq -j -r CursorConnect.zip assets customization contentScript.js flip.css flip.js ./platform/chromium/manifest.json popup.css popup.html popup.js tick.css
+                args: zip -qq -r CursorConnect.zip assets customization contentScript.js flip.css flip.js popup.css popup.html popup.js tick.css && zip -j CursorConnect.zip ./platform/chromium/manifest.json
             - uses: mnao305/chrome-extension-upload@v5.0.0
               with:
                 file-path: CursorConnect.zip
