--- a/.github/workflows/chrome_publish.yml
+++ b/.github/workflows/chrome_publish.yml
@@ -12,11 +12,11 @@ jobs:
             - uses: montudor/action-zip@v1
               with:
                 args: zip -qq -r CursorConnect.zip assets customization contentScript.js flip.css flip.js popup.css popup.html popup.js tick.css && zip -j CursorConnect.zip ./platform/chromium/manifest.json
-            - uses: mnao305/chrome-extension-upload@v5.0.0
+            - uses: mobilefirstllc/cws-publish@latest
               with:
-                file-path: CursorConnect.zip
-                extension-id: golmpimdjemjkffedbgjflgbcmcdcfnf
-                client-id: ${{ secrets.CLIENT_ID }}
-                client-secret: ${{ secrets.CLIENT_SECRET }}
-                refresh-token: ${{ secrets.REFRESH_TOKEN }}
-                publish: false
+                action: 'upload'
+                zip_file: CursorConnect.zip
+                extension_id: golmpimdjemjkffedbgjflgbcmcdcfnf
+                client_id: ${{ secrets.CLIENT_ID }}
+                client_secret: ${{ secrets.CLIENT_SECRET }}
+                refresh_token: ${{ secrets.REFRESH_TOKEN }}
