--- a/.github/workflows/firefox_publish.yml
+++ b/.github/workflows/firefox_publish.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v1
-
+      - run: cp platform/firefox/manifest.json manifest.json && rm -rf promo platform
       - name: "web-ext build"
         id: web-ext-build
         uses: kewisch/action-web-ext@v1
@@ -32,9 +32,6 @@ jobs:
       runs-on: ubuntu-latest
       steps:
           - uses: actions/checkout@v1
-          - uses: montudor/action-zip@v1
-            with:
-              args: cp platform/firefox/manifest.json manifest.json && rm -rf promo platform
           - uses: trmcnvn/firefox-addon@v1
             with:
               uuid: 'cursor@alexinabox.de'
