--- a/.github/workflows/firefox_publish.yml
+++ b/.github/workflows/firefox_publish.yml
@@ -27,15 +27,13 @@ jobs:
         with:
           name: target.xpi
           path: ${{ steps.web-ext-build.outputs.target }}
-
-  publish:
-      runs-on: ubuntu-latest
-      steps:
-          - uses: actions/checkout@v1
-          - uses: trmcnvn/firefox-addon@v1
-            with:
-              uuid: 'cursor@alexinabox.de'
-              xpi: ${{ steps.web-ext-build.outputs.target }}
-              manifest: platform/firefox/manifest.json
-              api-key: ${{ secrets.FIREFOX_API_KEY }}
-              api-secret: ${{ secrets.FIREFOX_API_SECRET }}
+      
+      -name: "Publish"
+       uses: actions/checkout@v1
+       uses: trmcnvn/firefox-addon@v1
+       with:
+        uuid: 'cursor@alexinabox.de'
+        xpi: ${{ steps.web-ext-build.outputs.target }}
+        manifest: platform/firefox/manifest.json
+        api-key: ${{ secrets.FIREFOX_API_KEY }}
+        api-secret: ${{ secrets.FIREFOX_API_SECRET }}
