--- a/platform/chromium/manifest.json
+++ b/platform/chromium/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "CursorConnect",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Real-time cursor interaction for a more connected browsing experience.",
   "permissions": [
     "storage",
@@ -15,7 +15,7 @@
       "js": [
         "contentScript.js"
       ],
-      "run_at": "document_end"
+      "run_at": "document_start"
     }
   ],
   "web_accessible_resources": [
