--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "CursorConnect",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "Real-time cursor interaction for a more connected browsing experience.",
     "browser_specific_settings": {
         "gecko": {
@@ -21,10 +21,21 @@
             "js": [
                 "contentScript.js"
             ],
-            "run_at": "document_end"
+            "run_at": "document_start"
         }
     ],
-    "browser_action": {
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "assets/cursor.png",
+                "customization/*.png"
+            ],
+            "matches": [
+                "*://*/*"
+            ]
+        }
+    ],
+    "action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "assets/icon16.png",
@@ -33,5 +44,5 @@
             "128": "assets/icon128.png"
         }
     },
-    "manifest_version": 2
+    "manifest_version": 3
 }
