--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -10,7 +10,8 @@
     },
     "permissions": [
         "storage",
-        "activeTab"
+        "activeTab",
+        "webNavigation"
     ],
     "background": {
         "scripts": [
