fix service worker declaring for chromium extensions

--- a/platform/chromium/manifest.json
+++ b/platform/chromium/manifest.json
@@ -8,9 +8,7 @@
     "webNavigation"
   ],
   "background": {
-    "service_worker": [
-      "serviceWorker.js"
-    ]
+    "service_worker": "serviceWorker.js"
   },
   "content_scripts": [
     {
