--- a/platform/chromium/manifest.json
+++ b/platform/chromium/manifest.json
@@ -1,36 +1,22 @@
 {
   "name": "CursorConnect",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Real-time cursor interaction for a more connected browsing experience.",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "webNavigation"
-  ],
+  "permissions": ["storage", "activeTab", "webNavigation"],
   "background": {
     "service_worker": "serviceWorker.js"
   },
   "content_scripts": [
     {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "contentScript.js"
-      ],
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["contentScript.js"],
       "run_at": "document_start"
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": [
-        "assets/cursor.png",
-        "customization/*.png"
-      ],
-      "matches": [
-        "*://*/*"
-      ]
+      "resources": ["assets/cursor.png", "customization/*.png"],
+      "matches": ["*://*/*"]
     }
   ],
   "action": {
