--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -1,54 +1,38 @@
 {
-    "name": "CursorConnect",
-    "version": "0.2.4",
-    "description": "Real-time cursor interaction for a more connected browsing experience.",
-    "browser_specific_settings": {
-        "gecko": {
-            "id": "cursor@alexinabox.de",
-            "strict_min_version": "109.0"
-        }
-    },
-    "permissions": [
-        "storage",
-        "activeTab",
-        "webNavigation"
-    ],
-    "background": {
-        "scripts": [
-            "serviceWorker.js"
-        ]
-    },
-    "content_scripts": [
-        {
-            "matches": [
-                "http://*/*",
-                "https://*/*"
-            ],
-            "js": [
-                "contentScript.js"
-            ],
-            "run_at": "document_start"
-        }
-    ],
-    "web_accessible_resources": [
-        {
-            "resources": [
-                "assets/cursor.png",
-                "customization/*.png"
-            ],
-            "matches": [
-                "*://*/*"
-            ]
-        }
-    ],
-    "action": {
-        "default_popup": "popup.html",
-        "default_icon": {
-            "16": "assets/icon16.png",
-            "32": "assets/icon32.png",
-            "48": "assets/icon48.png",
-            "128": "assets/icon128.png"
-        }
-    },
-    "manifest_version": 3
+  "name": "CursorConnect",
+  "version": "0.2.5",
+  "description": "Real-time cursor interaction for a more connected browsing experience.",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "cursor@alexinabox.de",
+      "strict_min_version": "109.0"
+    }
+  },
+  "permissions": ["storage", "activeTab", "webNavigation"],
+  "background": {
+    "scripts": ["serviceWorker.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["contentScript.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["assets/cursor.png", "customization/*.png"],
+      "matches": ["*://*/*"]
+    }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "32": "assets/icon32.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
+    }
+  },
+  "manifest_version": 3
 }
