--- a/.github/workflows/firefox_publish.yml
+++ b/.github/workflows/firefox_publish.yml
@@ -1,11 +1,10 @@
 name: Publish to Firefox Add-ons
 on:
-    push:
-      branches: [ "main" ]
-    workflow_dispatch:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
-
   build:
     name: "Build"
     runs-on: ubuntu-latest
@@ -28,11 +27,11 @@ jobs:
         with:
           name: target.xpi
           path: ${{ steps.web-ext-build.outputs.target }}
-      
+
       - name: "Publish"
         uses: trmcnvn/firefox-addon@v1
         with:
-          uuid: 'cursor@alexinabox.de'
+          uuid: "cursor@alexinabox.de"
           xpi: ${{ steps.web-ext-build.outputs.target }}
           manifest: manifest.json
           api-key: ${{ secrets.FIREFOX_API_KEY }}
